--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="resources/css/appstyle.css">
     <script src="../libs/jquery/jquery-2.2.4.js"></script>
     <script src="../libs/bootstrap-3.3.6-dist/js/bootstrap.js"></script>
-    <script src="../libs/bootstrap-3.3.6-dist/js/app.js"></script>
+    <script src="resources/script/app.js"></script>
     <!--here's where the red button icon will be-->
 </head>
 <body>
